Fixing the spacing
Copied and pasted from Lynda.com. I'm not sure what padding is.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
   font-family: "Helvetica", sans-serif;
+  font: 100% Verdana, Geneva, sans-serif;
+	width: 80%;
+	margin-right: auto;
+	margin-left: auto;
+	padding: 2.5% 2.5% 0;
 }
 
 h2 {
